--- a/asset/frontend/css/style.css
+++ b/asset/frontend/css/style.css
@@ -1124,7 +1124,7 @@ div .flex_column {
 	float: left;
     width: 40%;
     display: inline;
-    padding: 8px 0;
+    padding: 4px 0;
     font-size: 12px;
     border-right: 1px dotted #ccc;
 	text-align: center;
@@ -1587,3 +1587,45 @@ blockquote:after {
     text-transform: none;
     top: 35px;
     z-index: 777;
+}
+.contactSection {
+    background: url(../images/bgContact.png) no-repeat;
+    background-size: cover;
+    padding-top: 40px;
+	padding-bottom: 40px;
+}
+.contactSection .contact-right h2 {
+    margin-top: 25px;
+    margin-bottom: 15px;
+    font-size: 30px;
+	    color: white;
+}
+.contactSection .contact-right a.btnContact:hover {
+    background: #008ac5;
+}
+.contactSection .contact-right a.btnContact {
+    color: white;
+    background: #009cde;
+    margin-right: 30px;
+    padding: 0 15px;
+    line-height: 33px;
+    font-size: 14px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    display: inline-block;
+    -moz-transform: translateY(1px);
+    -ms-transform: translateY(1px);
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+    margin-top: 15px;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+}
+.contactSection .contact-right a.btnContact .fa {
+    font-size: 20px;
+    margin-right: 15px;
+    vertical-align: middle;
+}
