--- a/asset/frontend/css/style.css
+++ b/asset/frontend/css/style.css
@@ -1683,3 +1683,10 @@ blockquote:after {
     padding: 2px 2px 2px 25px;
 }
 
+.shopping-cart {
+    display: inline-block;
+    background: url("../images/shoping_cart1.png") no-repeat 0 0;
+    width: 24px;
+    height: 24px;
+    margin: 0 10px 0 0;
+}
