--- a/asset/frontend/css/style_camy.css
+++ b/asset/frontend/css/style_camy.css
@@ -2926,7 +2926,7 @@ blockquote.pushquote { width: 40%; float: right; margin: 0 10px; border: 0; font
 --------------------------------------
 ************************/
 table { text-align: center; color: #2a2b2c; border: 1px solid #fff; border-collapse: collapse; }
-table th { background: #dedede; border: 1px solid #fff; padding: 8px; width: 100px; }
+table th { background: white; border: 1px solid #fff; padding: 8px; width: 100px; }
 table tr { background: #efefef }
 table td { border: 1px solid #fff; padding: 8px; width: 100px; }
 /* ***********************
