--- a/asset/frontend/css/style.css
+++ b/asset/frontend/css/style.css
@@ -1717,3 +1717,9 @@ blockquote:after {
 	font-weight: bold;
 	text-align: left;
 }
+
+.title-content {
+	font-weight: bold;
+	padding: 10px;
+	font-size: 24px;	
+}
